--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <!-- Used for automated testing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,17 +17,33 @@
 <body>
 
     <!-- Create a header element  -->
-
+<header style= "background-color: darkgray;">
+    <center>
+    <h1>Lamar Pringle</h1>
+    </center>
+</header>
     <!-- Inside the header, add an <h1> element containing your name -->
-
-    <main>
+       
+        <main style="background-color: aqua;">
+    
     <!-- Include an image -->
 
+    <img src="LP image/Playstation Logo.jpeg">
+
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
-    </main>
+<ul>
+    <li style="font-family: 'Courier New', Courier, monospace;">I ran track while in high school</li>
+    <li style="font-family: 'Courier New', Courier, monospace;">I was promoted to sergeant at 20 years old in the Army</li>
+    <li style="font-family: 'Courier New', Courier, monospace;">My wife and I have two businesses</li>
+</ul>
+</main>
     <!-- Create a footer element -->
-
+<footer style="background-color: coral;">
+    <p>
+        <i>You don't lose if you get knocked down; you lose if you stay down.<br>
+    Muhammad Ali</i>
+</p>
+</footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 
     <div id="container">
